--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.vscode
+.vscode/
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/c,python,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=c,python,java
