Fixed some memory leaks

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.vscode
 .vscode/
-
+.envrc
+vgcore*
 
 # Created by https://www.toptal.com/developers/gitignore/api/c,python,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=c,python,java
