Java auto mode complete

--- a/G00398776- Fiachra O Donoghue - Assignment 1/java/shop/shop.properties
+++ b/G00398776- Fiachra O Donoghue - Assignment 1/java/shop/shop.properties
@@ -1,7 +1,7 @@
-stock.path="../../stock.csv"
-customers.path="../customers.csv"
-names.path="../names.list"
-faces.path="../faces"
+stock.path=/../stock.csv
+customers.path=/../customers.csv
+names.path=/../names.list
+faces.path=/../faces
 budget.range.min=100
 budget.range.max=400
 items.range.min=1
@@ -10,11 +10,5 @@ pieces.range.min=1
 pieces.range.max=100
 reorder.threshold=5
 line.short=-------------------
+line.med=-------------------------------------
 line.long=-------------------------------------------------
-face.shopkeeper="      
-       _www_ 
-      /-o-o-\  
-    (|   -   |)
-      \ -=- /  
-      /`---'\
-"
